static/css/style.css
body {
    background-color: #ffffff;
    font-family: Montserrat, sans-serif;
    color: #252525;
}

.bold {
    font-weight: bold;
}

/* Navigation */
.brand {
    font-family: Libre Baskerville, serif;
    text-transform: uppercase;
    text-decoration: none;
    padding-top: .3125rem;
    padding-bottom: .3125rem;
    margin-right: 1rem;
    white-space: nowrap;
    font-size: .95rem;
    font-weight: 700;
    letter-spacing: 3px;
    color: #d9dcd6;
}

.brand a {
    text-decoration: none;
}

.nav-background {
    background-color: #445261;
}

.container {
    width: 100vw;
    margin: 0px;
    padding: 0px;
}

/* Sign in / Sign out / Register pages */

.container-authentication {
    display: block;
    justify-content: center;
    width: 100vw;
    margin: 0;
}

.container-auth-box {
    margin: 40px auto;
    width: 90%;
    padding: 40px;
    background-color: #d9dcd6;
}

/* Home page: Featured image styles */
.featured-image-container {
    background-color: #ffffff;
}

.home-image {
    background: url("/static/images/wimpleton_home_1067x600.webp") no-repeat center/cover, #445261;
    height: 400px;
}

/* Home page: Featured content section */
.featured-content-container {
    background-color: #ffffff;
    padding: 40px 25px;
}

.featured-content {
    background-color: #d9dcd6;
    padding: 40px 25px;
    font-size: 1em;
}

.featured-content a {
    display: block;
    width: 250px;
    margin-left: auto;
    margin-right: auto;
}

.event-type-container {
    display: block;
    justify-content: center;
    background-color: #ffffff;
}

.authenticated-user {
    background-color: #445261;
    color: #d9dcd6;
}

.featured-events {
    width: 100vw;
    display: block;
    justify-content: center;
    padding: 15px 2px;
    background-color: #ffffff;
}

.featured-events h2 {
    font-family: Libre Baskerville, serif;
    text-transform: uppercase;
    font-size: 1.12rem;
    font-weight: 700;
    letter-spacing: 3px;
    padding-top: 35px;
}

.featured-events p {
    font-size: 1rem;
    padding: 20px 25px;
}

#featured-events-img-weddings {
    background: url("/static/images/featured-event-images-weddings_600x600.webp") no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin: 0 auto;
    padding-bottom: 20px;
    /* Makes the square image into a circle */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#featured-events-img-celebrations {
    background: url("/static/images/featured-event-images-celebrations_600x600.webp") no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin: 0 auto;
    padding-bottom: 20px;
    /* Makes the square image into a circle */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#featured-events-img-corporate {
    background: url("/static/images/featured-event-images-corporate_600x600.webp") no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin: 0 auto;
    padding-bottom: 20px;
    /* Makes the square image into a circle */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#featured-events-img-galas {
    background: url("/static/images/featured-event-images-galas_600x600.webp") no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin: 0 auto;
    padding-bottom: 20px;
    /* Makes the square image into a circle */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

/* Venue Hire Page */
.container-venues {
    display: block;
    justify-content: center;
    padding: 60px 20px;
}

.container-venue-card {
    width: 320px;
}

.venue-image {
    background: url("/static/images/featured_image_1600x900_chapel.webp") no-repeat left/cover, 40px, #445261;
    height: 550px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-image {
    background: url("/static/images/featured_image_1600x900_courtyard.webp") no-repeat left/cover, 40px, #445261;
    height: 550px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact-image {
    background: url("/static/images/featured_image_1600x900_gardens.webp") no-repeat left/cover, 40px, #445261;
    height: 550px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.overlay-text-main {
    background-color: rgb(246, 250, 246, .5);
    font-size: 130%;
    letter-spacing: 10px;
    text-transform: uppercase;
    width: auto;
    height: 75px;
    text-align: center;
    padding: 20px;
}

.venue-title {
    font-family: Libre Baskerville, serif;
    text-transform: uppercase;
    text-decoration: none;
    padding-top: .3125rem;
    padding-bottom: .3125rem;
    margin-right: 1rem;
    /*white-space: nowrap;*/
    font-size: 1.15rem;
    font-weight: 700;
    letter-spacing: 3px;
}

.image-container img {
    width: 320px;
    margin: 10px 0;
}

/* Booking Dashboard Sections */
.booking-list {
    width: 90vw;
    margin: auto;
    display: block;
    padding: 10px;
}

.booking-card-container {
    width: 100%;
    display: block;
    margin: 0;
    padding-bottom: 60px;
}

.booking-card-individual {
    padding: 10px;
    margin-bottom: 10px;
    background-color: #d9dcd6;
}

.booking-venue {
    font-weight: bold;
}

/* Create Booking Page */
.create-booking-form-container {
    width: 90vw;
    padding: 50px 20px;
    margin: 25px auto;
    background-color: #d9dcd6;
}

.messages {
    color: red;
    font-weight: bold;
}

.venue-container, 
.date-container,
.guests-container,
.event-type-container {
    padding-bottom: 20px;
}

.btn-edit {
    background-color: #188181;
    color: #fff;
    /* width: 150px;
    padding: .5rem;
    margin: auto;
    text-align: center;
    color: #1A1A1A;
    font-weight: 600;
    letter-spacing: 2px;
    font-size: medium; */
}

.btn-delete {
    color: #fff;
    background: red;
    margin-top: 5px;
}


/* About Page */
#gallery {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

#photos img {
    width: 100%;
    line-height: 1em;
}

#photos {
    line-height: 0;
}

/* Footer */

.footer {
    background-color: #445261;
}

.footer-text {
    color: #ffffff;
} 

/* Media query for mobile devices and later (375px and up) */
@media screen and (min-width: 375px)  {
    /* Venue Listing Page */
    .container-venues {
        display: flex;
        flex-flow: row wrap;
        align-items: flex-start;
        justify-content: space-evenly;
        padding: 20px;
    }
    
    .container-venue-card {
        margin: 40px 20px;
    }

    /* About page */
    /* Gallery */
    #photos {
        column-count: 2;
    }

}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
    /* Home page */
    .home-image {
        height: 500px;
        background-position: center;
    }

    .event-type-container {
        display: flex;
        width: 100vw;
        justify-content: center;
        align-items: center;
    }

    /* Featured sections at top of pages */
    .featured-content {
        width: 90vw;
        margin: 0 auto;
    }

    /* Venue Listing page */
    .container-venues {
        width: 768px;
        margin: 0 auto;
    }

    /* Sign up / Sign out / Registration pages */
    .container-auth-box {
        width: 550px;
    }

    .featured-events {
        width: 350px;
    }

    /* Booking Dashboard - Booking Cards Section */
    .booking-card-container {
        display: flex;
        flex-flow: row wrap;
        align-items: flex-start;
        justify-content: flex-start;
        gap: 20px 20px;
    }
     
    .booking-card-individual {
        width: 320px;
        padding: 10px;
        /*margin-bottom: 10px;
        background-color: #d9dcd6;*/
    }

    /* About page gallery */
    /* Gallery */
    #photos {
        column-count: 3;
    }

}

/* larger devices - laptops, desktops, and up (992px and up)  */
@media screen and (min-width: 992px) {
    /* General */

    /* Venue Listing page */
    .container-venues {
        width: 90vw;
        margin: 0 auto;
        justify-content: space-evenly;
    }
}

